--- a/Logos_Front/src/main/webapp/WEB-INF/web.xml
+++ b/Logos_Front/src/main/webapp/WEB-INF/web.xml
@@ -18,4 +18,8 @@
     <servlet-name>Faces Servlet</servlet-name>
     <url-pattern>/logos/*</url-pattern>
   </servlet-mapping>
+  <error-page>
+    <exception-type>javax.faces.application.ViewExpiredException</exception-type>
+    <location>/login.xhtml</location>
+</error-page>
 </web-app>
