test service rest, ça marche !

--- a/Logos_Front/pom.xml
+++ b/Logos_Front/pom.xml
@@ -5,12 +5,17 @@
 	<artifactId>Logos_Front</artifactId>
 	<version>1.0</version>
 	<packaging>war</packaging>
+	<build>
+	   <finalName>Logos_Front</finalName>
+	 </build>
+	
 	<properties>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<spring.version>4.3.3.RELEASE</spring.version>
 		<jsf.version>2.2.8</jsf.version>
+		<jackson.library>2.7.5</jackson.library>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -23,6 +28,21 @@
 			<artifactId>spring-web</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+		 <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.library}</version>
+        </dependency>
+        <!-- <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
+            <version>${jackson.library}</version>
+        </dependency> -->
 		<dependency>
 			<groupId>com.sun.faces</groupId>
 			<artifactId>jsf-api</artifactId>
