Web service connection, ca marche :)

--- a/Logos_Front/pom.xml
+++ b/Logos_Front/pom.xml
@@ -39,10 +39,19 @@
             <version>${jackson.library}</version>
         </dependency>
         <!-- <dependency>
+        
+        	On fait du JSON...
+        	
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-xml</artifactId>
             <version>${jackson.library}</version>
-        </dependency> -->
+        </dependency> -->		
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-text</artifactId>
+		    <version>1.1</version>
+		</dependency>
+		        
 		<dependency>
 			<groupId>com.sun.faces</groupId>
 			<artifactId>jsf-api</artifactId>
