--- a/Logos_Entity/pom.xml
+++ b/Logos_Entity/pom.xml
@@ -10,6 +10,7 @@
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<jee.version>7.0</jee.version>
+		<jackson.library>2.7.5</jackson.library>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -18,6 +19,13 @@
 			<version>${jee.version}</version>
 			<scope>provided</scope>
 		</dependency>
+		
+		<dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.library}</version>
+            <scope>provided</scope>
+        </dependency>
 
 	</dependencies>
 </project>
