--- a/Logos_Front/src/main/webapp/WEB-INF/web.xml
+++ b/Logos_Front/src/main/webapp/WEB-INF/web.xml
@@ -10,6 +10,15 @@
   </listener-class>
   </listener>
   
+  <filter>
+  <filter-name>CorsFilter</filter-name>
+  <filter-class>org.apache.catalina.filters.CorsFilter</filter-class>
+</filter>
+<filter-mapping>
+  <filter-name>CorsFilter</filter-name>
+  <url-pattern>/rest/*</url-pattern>
+</filter-mapping>
+  
   <servlet>
     <servlet-name>Faces Servlet</servlet-name>
     <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
