--- a/business/pom.xml
+++ b/business/pom.xml
@@ -8,6 +8,8 @@
 		<version>1.0</version>
 	</parent>
 	<artifactId>business</artifactId>
+	<groupId>com.logos</groupId>
+	<version>1.0</version>
 
 	<properties>
 		<maven.compiler.source>1.8</maven.compiler.source>
@@ -18,7 +20,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.logos</groupId>
-			<artifactId>Logos_Data</artifactId>
+			<artifactId>data</artifactId>
 			<version>1.0</version>
 		</dependency>
 	</dependencies>
