--- a/data/pom.xml
+++ b/data/pom.xml
@@ -8,6 +8,8 @@
 		<version>1.0</version>
 	</parent>
 	<artifactId>data</artifactId>
+	<groupId>com.logos</groupId>
+	<version>1.0</version>
 
 	<properties>
 		<maven.compiler.source>1.8</maven.compiler.source>
@@ -48,7 +50,7 @@
 		</dependency>
 		<dependency>
 			<groupId>com.logos</groupId>
-			<artifactId>Logos_Entity</artifactId>
+			<artifactId>entity</artifactId>
 			<version>1.0</version>
 		</dependency>
 	</dependencies>
