--- a/front/pom.xml
+++ b/front/pom.xml
@@ -8,6 +8,8 @@
 		<version>1.0</version>
 	</parent>
 	<artifactId>front</artifactId>
+	<groupId>com.logos</groupId>
+	<version>1.0</version>
 	<packaging>war</packaging>
 	
 	<build>
@@ -25,7 +27,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>com.logos</groupId>
-			<artifactId>Logos_Business</artifactId>
+			<artifactId>business</artifactId>
 			<version>1.0</version>
 		</dependency>
 		<dependency>
