--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,22 @@
 	<packaging>pom</packaging>
 	<build>
 	   <finalName>Logos</finalName>
+
+<plugins>
+
+ <plugin>
+                <groupId>org.apache.tomcat.maven</groupId>
+                <artifactId>tomcat7-maven-plugin</artifactId>
+                <version>2.2</version>
+                <configuration>
+                        <url>http://localhost:8082/manager/text</url>
+                        <server>TomcatServer</server>
+                        <path>/logos</path>
+                </configuration>
+                </plugin>
+
+
+</plugins>
 	 </build>
 	
 	<properties>
