--- a/data-mongo/pom.xml
+++ b/data-mongo/pom.xml
@@ -24,11 +24,7 @@
 			<version>1.0</version>
 			<scope>provided</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-core</artifactId>
-			<version>4.3.8.Final</version>
-		</dependency>
+		
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-orm</artifactId>
@@ -52,7 +48,12 @@
 		<dependency>
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-mongodb</artifactId>
-			<version>2.0.6.RELEASE</version>
+			<version>1.10.11.RELEASE</version>
+			<!-- 
+				Les version 2.x.x de spring-data-mongodb
+				ne sont pas compatibles avec Spring 4.3.x
+				(Merci StackOverflow...)
+			-->
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
