--- a/entity/pom.xml
+++ b/entity/pom.xml
@@ -31,6 +31,11 @@
             <version>${jackson.library}</version>
             <scope>provided</scope>
         </dependency>
+       <dependency>
+		    <groupId>org.springframework.data</groupId>
+		    <artifactId>spring-data-mongodb</artifactId>
+		    <version>1.9.5.RELEASE</version>
+		</dependency>
 
 	</dependencies>
 </project>
