--- a/data-mongo/pom.xml
+++ b/data-mongo/pom.xml
@@ -50,6 +50,16 @@
 			<version>1.2.17</version>
 		</dependency>
 		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.5.4</version> <!-- to produces json -->
+        </dependency>
+        <dependency>
+		    <groupId>com.google.code.gson</groupId>
+		    <artifactId>gson</artifactId>
+		    <version>2.7</version>
+		</dependency>
+		<dependency>
 			<groupId>com.logos</groupId>
 			<artifactId>entity</artifactId>
 			<version>1.0</version>
