--- a/entity/pom.xml
+++ b/entity/pom.xml
@@ -36,6 +36,12 @@
 		    <artifactId>spring-data-mongodb</artifactId>
 		    <version>1.9.5.RELEASE</version>
 		</dependency>
+		<dependency>
+		    <groupId>com.google.code.gson</groupId>
+		    <artifactId>gson</artifactId>
+		    <version>2.7</version>
+		</dependency>
+		
 
 	</dependencies>
 </project>
