--- a/business/pom.xml
+++ b/business/pom.xml
@@ -1,7 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
+
 	<parent>
 		<groupId>com.logos</groupId>
 		<artifactId>Logos</artifactId>
@@ -18,16 +19,22 @@
 		<spring.version>4.3.3.RELEASE</spring.version>
 	</properties>
 	<dependencies>
-	<dependency>
+		<dependency>
 			<artifactId>data-api</artifactId>
 			<groupId>com.logos</groupId>
 			<version>1.0</version>
 		</dependency>
 		<dependency>
-		<!-- TODO remplacer par business -->
+			<!-- TODO remplacer par business -->
 			<groupId>com.logos</groupId>
 			<artifactId>data-mysql</artifactId>
 			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 </project>
